--- a/src/login.css
+++ b/src/login.css
@@ -9,7 +9,7 @@ button{
     margin-left: 35px;
 }
 .log{
-    background-image: url("https://as2.ftcdn.net/jpg/01/95/37/99/500_F_195379915_wIYTPA0nJJ7jVBlkq33x1cJftRj6vgni.jpg");
+    background-image: url("https://previews.123rf.com/images/mirexon/mirexon1412/mirexon141200138/34449425-abstract-background-with-basket-and-shopping-site-menu.jpg");
     height: 100%; 
     width: 100%;
     position: fixed;
