--- a/src/login.css
+++ b/src/login.css
@@ -26,6 +26,13 @@ button{
     margin: 20px;
     margin-top: 80px;
 }
+
+.register_form{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
 .name1{
     margin: 20px;
     margin-left: 35px;
